envoy/config/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:  { address: 0.0.0.0, port_value: 8080 }
      listener_filters:
        - name: "envoy.filters.listener.http_inspector"
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: myroute
                  response_headers_to_add:
                    - header:
                        key: myname
                        value: txl
                  virtual_hosts:
                    - name: myhost
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: lain_cluster_config}
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: lain_cluster_config
      connect_timeout: 1s
      type: Static
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: lain_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.17.0.2
                      port_value: 80
                load_balancing_weight: 2
              - endpoint:
                  address:
                    socket_address:
                      address: 172.17.0.3
                      port_value: 80
                load_balancing_weight: 4
